fixes #229 - adding z-index to ensure clickability

--- a/styles/cog_admin.css
+++ b/styles/cog_admin.css
@@ -9,6 +9,7 @@ div.block div.edit {
   top: 0;
   right: 0;
   display: none;
+  z-index: 20;
 }
 
 div.block:hover div.edit {
